css/jsme-nick-31.css
/* ... */
.menuLi {
  font-family: "Roboto", sans-serif;
  font-weight: normal;
  padding: 5px 0 5px 15px;
  transition: all 0.2s;
  color: #333;
  position: relative;
  height: 30px;
  box-sizing: border-box;
}

.selectedLi {
  background-color: var(--lightBlue);
  /* padding-left: 20px; */
  color: #fff;
  transition: all 0.2s;
  font-weight: bold;
}

#nomeclatureMenu .menuLi {
  /* border: 1px solid var(--bgColor); */
  border-left: 0;
  border-right: 0;
}

#nomeclatureMenu .menuLi:hover {
  background-color: var(--bgColor);
  /* border-color: #ddd; */
}

#nomeclatureMenu .selectedLi {
  font-weight: bold;
  background-color: var(--bgColor);
  /* border: 1px solid var(--baseColor) !important; */
  /* border-left: 0 !important; */
  /* border-right: 0 !important; */
  margin-left: -3px;
  padding-left: 18px;
  /* box-shadow: 1px 1px 3px -2px rgba(0, 0, 0, 0.5); */
}

.crossMenuLi {
  font-family: "Roboto", sans-serif;
  font-weight: normal;
  padding: 5px 0 5px 5px;
  transition: all 0.3s;
  color: #333;
}

.menuLi::before {
  /* content: '';
    width: 5px;
    height: 5px;
    border-radius: 50%;
    background-color: #fff;
    transition: all 0.3s;
    position: absolute;
    left: 5px;
    top: 14px; */
}

.menuLi:hover::before {
  transition: all 0.3s;
  background-color: #fff;
}

.menuLi:hover {
  cursor: pointer;
  background-color: var(--bgColor);
  color: #111;
  transition: all 0.3s;
}

.menuLi.selectedLi:hover {
  /* cursor: pointer; */
  background-color: var(--lightBlue);
  color: #fff;
  transition: all 0.3s;
}

.crossMenuLi::before {
  content: "\002B";
  text-align: center;
  display: inline-block;
  box-sizing: border-box;
  width: 25px;
  height: 25px;
  /* border-radius: 50%; */
  background-color: #fff;
  /* margin-right: 3px; */
  transition: all 0.3s;
  color: #ccc;
  padding: 0px 5px;
  font-size: 1.25rem;
  /* border: 1px solid #ddd; */
}

.crossMenuLi:hover::before {
  color: var(--baseColor);
  transition: all 0.3s;
  background-color: transparent;
  border-color: var(--baseColor);
}

.crossMenuLi:hover {
  cursor: pointer;
  background-color: var(--bgColor);
  color: #111;
  transition: all 0.3s;
}

.crossMenuLi.selectedLi::before {
  content: "\268A";
  transition: all 0.3s;
  background-color: transparent !important;
  color: #fff;
  padding: 0px 5px;
  font-size: 1rem;
  /* border: 1px solid var(--baseColor); */
}

.crossMenuLi.selectedLi {
  background-color: var(--baseColor);
  /* padding-left: 10px; */
  color: #fff;
  transition: all 0.2s;
  font-weight: 600;
  border: 1px solid var(--baseColor);
  border-bottom: 0;
  font-size: 1rem;
}

.JmolContainer {
  width: 480px;
  height: 220px;
  border-top: 0;
  z-index: 0;
}

.JmolContainer *:focus-visible {
  outline: none;
}

.button {
  max-width: 100px;
  min-height: 25px;
  padding: 10px;
  background-color: #ddd;
  cursor: pointer;
  border: 1px solid #666;
  border-radius: 3px;
}

.checkBoxContainer {
  display: block;
  position: relative;
  padding-left: 25px;
  margin: 12px 0 12px 12px;
  cursor: pointer;
  font-family: "Roboto Condensed", sans-serif;
  font-size: 1rem;
}

.inactive {
  opacity: 0.3;
}

.checkBox,
.unselectedCheck .checkBox {
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  height: 18px;
  width: 18px;
  background-color: var(--bgColor);
  border: 1px solid var(--baseColor);
  border-radius: 4px;
  transition: all 0.3s;
}

.checkBoxContainer.unselectedCheck:hover .checkBox,
.checkBoxContainer.unselectedCheck:hover::after {
  border: 1px solid var(--guiColor);
  transition: all 0.3s;
}

.unselectedCheck::after {
  content: " ";
  width: 18px;
  height: 18px;
  position: absolute;
  top: 0;
  left: 0;
  color: #fff;
  background-color: var(--bgColor);
  border-radius: 4px;
  transition: all 0.3s;
  border: 1px solid var(--baseColor);
  line-height: 18px;
  font-size: 18px;
}

.unselectedCheck:hover::after {
  background-color: var(--bgColor);
  /* border-color: */
}

.selectedCheck::after {
  content: "\2713";
  width: 18px;
  height: 18px;
  position: absolute;
  top: 0;
  left: 0;
  background-color: var(--baseColor);
  color: #fff;
  font-weight: bold;
  /* padding: 0; */
  font-family: "Roboto", sans-serif;
  line-height: 18px;
  font-size: 18px;
  border-radius: 4px;
  text-align: center;
  border: 1px solid var(--baseColor);
  transition: all 0.3s;
}

/* .selectedCheck .checkBox {
    border: 1px solid #666;
    background-color: #fff;
} */

/* .radioMenuContainer {
    padding-left: 15px;
    border: 1px solid var(--baseColor);

} */

.radioCheckContainer {
  display: block;
  position: relative;
  margin: 5px 0 5px 12px;
  cursor: pointer;
  font-family: "Roboto Condensed", sans-serif;
  /* font-size: 1.125rem; */
  padding-left: 24px;
  display: inline-block;
  transition: all 0.3s;
}

.radioCheck,
.unselectedRadio .radioCheck {
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  height: 18px;
  width: 18px;
  background-color: var(--bgColor);
  border: 1px solid var(--baseColor);
  border-radius: 50%;
  transition: all 0.3s;
}

.radioCheckContainer.unselectedRadio:hover .radioCheck {
  border: 1px solid #999;
  transition: all 0.3s;
}

.radioCheckContainer.unselectedRadio .radioCheck::after {
  content: "";
  width: 6px;
  height: 6px;
  position: absolute;
  top: 5px;
  left: 5px;
  background-color: var(--bgColor);
  border-radius: 50%;
  transition: all 0.3s;
}

.radioCheckContainer.unselectedRadio:hover .radioCheck::after {
  background-color: var(--guiColor);
  transition: all 0.3s;
}

.radioCheckContainer.selectedRadio .radioCheck {
  background-color: #fff;
  border-color: var(--baseColor);
  transition: all 0.3s;
}

.radioCheckContainer.selectedRadio .radioCheck::after {
  content: "";
  width: 8px;
  height: 8px;
  position: absolute;
  top: 4px;
  left: 4px;
  background-color: var(--baseColor);
  border-radius: 50%;
  transition: all 0.3s;
}
/* ... */

